@@ -1,0 +1,78 @@
+<p>Welcome to the Help Center! This way of doing documentation is a bit
+different from what you may be used to, so please read this document
+to understand how to contribute.</p>
+<h2>Quick Start</h2>
+<p>For the impatient, here's the bare minimum you should know:</p>
+
+<ul>
+<li>You normally need to be logged in.</li>
+<li>There are several different documentation types, most are self-explanatory, but pay attention to the difference between a How-to and a Tutorial (explained below).</li>
+<li>To add a piece of documentation/help, go into the relevant section, make sure there isn't already an existing entry about what you want to add, and use the button at the top right to add (normally says Add  FAQ or similar).</li>
+<li>Add your content, and save it. This edit/view cycle can be performed as many times as you like, until you are happy with the result.</li>
+<li>Make sure you Submit your document for publication when you are done - top right pulldown in the content area.</li>
+<li>A reviewer will then pick up the document, and publish it unless the content needs to be improved.</li>
+<li>If somebody adds comments to your entry later, you will be notified by e-mail.</li>
+
+</ul>
+<h2>What type of item is my documentation?</h2>
+<p>Below is a description, usage and example for each type.</p>
+<dl>
+<dt>Frequently Asked Question (FAQ)</dt>
+<dd>An FAQ is a short question with a 1-2 paragraph answer. You can add several questions to a FAQ area and group the questions into sections:
+<pre>    FAQ Example
+    Question: What is Plone?
+
+    Answer:
+    Plone is an open source Enterprise Content Management
+    System (ECM/CMS) that runs on top of Zope and CMF.
+</pre>
+</dd>
+<dt>HowTo</dt>
+<dd>A HowTo is a one-page description on how to accomplish something, but is folderish, so Files/Images can be attached. It's usually very brief and to-the-point.<p>Typical How-Tos:</p>
+
+<ul>
+<li>How to set up Plone with the Apache Web Server</li>
+<li>How to change the tabs that appear at the top of the portal</li>
+
+</ul>
+</dd>
+<dt>Tutorial</dt>
+<dd>A tutorial is a multi-paged article with lots of detail. The tutorial is more in-depth than a How-to, and may cover the conceptual aspects of the task, in addition to the practical steps to get the job done.<p>If you are unsure of the difference of a How-to and a Tutorial, think about it as the difference between a recipe that only teaches you what ingredients are needed, and how to bake the cake (How-to), and an article telling you about the history behind cakes in general, that may or may not teach you how to actually bake one (Tutorial).</p>
+<p>Typical Tutorials:</p>
+
+<ul>
+<li>How to utilize workflows in your projects</li>
+<li>Why separate content, logic and presentation?</li>
+
+</ul>
+</dd>
+<dt>Reference Manual</dt>
+<dd>A reference manual is a definitive piece of documentation for some product or technology, and tends to be several pages in lenght, with sections breaking up the content. This is by far the rarest documentation type. </dd>
+<dt>Help Link</dt>
+<dd>A help link is a link (either external or internal). It is different from a standard Plone link in that it can have section and version information.<p>Typical Help Links:</p>
+
+<ul>
+<li>The Zope Book at zope.org</li>
+<li>CSS reference manual at W3C</li>
+
+</ul>
+</dd>
+<dt>Error Reference</dt>
+<dd>An error reference is meant to be the explanation of a particular error, with details on how to fix it, if relevant.<p>Typical Error References</p>
+
+<ul>
+<li>Expected sequence, got integer</li>
+<li>FS Page Template has errors: Compilation failed</li>
+
+</ul>
+</dd>
+<dt>Glossary Definition</dt>
+<dd>A glossary definition describes a particular term used as concisely as possible.<p>Typical Glossary Definitions:</p>
+
+<ul>
+<li>CMF: The Content Management Framework</li>
+<li>Workflow: A state machine structure used to model business processes</li>
+
+</ul>
+</dd>
+</dl>
