@@ -5,6 +5,12 @@ History of changes to PHC (name of developer listed in brackets)::
 
     PloneHelpCenter 4.0b4 (unreleased)
 
+    - Switch the sample manual text to html.  This way you can edit it
+      properly with TinyMCE.  It used to be structured text, which is
+      not accepted as mimetext by default, so you would actually lose
+      the layout when you edit it.
+      [maurits]
+
     - Register png icons from standard Plone for HelpCenterHowToFolder
       and HelpCenterLinkFolder.  Add upgrade step to apply the
       typeinfo and recatalog these two portal_types.  Otherwise on
